--- a/app/src/main/res/layout/activity_discovery.xml
+++ b/app/src/main/res/layout/activity_discovery.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/discover_background2"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,74 +20,94 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:theme="@style/ToolBarStyle"
             android:background="@drawable/background_toolbar_translucent"
+            android:theme="@style/ToolBarStyle"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/see_more_recent"
-            android:layout_alignBottom="@+id/see_more_recent"
-            android:layout_alignStart="@+id/popular_list"
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginStart="52dp"
-            android:gravity="center_vertical|center"
-            android:text="@string/recent"/>
-
-        <Button
-            android:id="@+id/see_more_recent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/recent_list"
-            android:layout_alignStart="@+id/see_more_popular"
-            android:layout_marginBottom="30dp"
-            android:text="@string/see_more"/>
-
-
-        <Button
-            android:id="@+id/see_more_popular"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/popular_list"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="30dp"
-            android:layout_marginEnd="21dp"
-            android:text="@string/see_more"/>
-
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/popular_list"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="30dp"
-            android:paddingBottom="10dp"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recent_list"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginStart="0dp"
+                    android:layout_weight="3"
+                    android:gravity="center_vertical|center"
+                    android:text="@string/recent"
+                    android:textAlignment="center"/>
+
+                <Button
+                    android:id="@+id/see_more_recent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="0dp"
+                    android:layout_weight="1"
+                    android:text="@string/see_more"/>
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recent_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="31dp"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="@+id/toolbar"
+                app:layout_constraintRight_toRightOf="@+id/toolbar"
+                app:layout_constraintTop_toBottomOf="@+id/see_more_recent"/>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/see_more_popular"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="31dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="@+id/toolbar"
-            app:layout_constraintRight_toRightOf="@+id/toolbar"
-            app:layout_constraintTop_toBottomOf="@+id/see_more_recent"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="4">
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:text="@string/popular"
+                    android:textAlignment="center"/>
+
+                <Button
+                    android:id="@+id/see_more_popular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_weight="1"
+                    android:text="@string/see_more"/>
+
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/popular_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="30dp"
+                android:paddingBottom="10dp"/>
+
+        </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/popular"
-            android:layout_alignBaseline="@+id/see_more_popular"
-            android:layout_alignBottom="@+id/see_more_popular"
-            android:layout_alignStart="@+id/textView"/>
-
-    </RelativeLayout>
+    </LinearLayout>
 
 </android.support.v4.widget.SwipeRefreshLayout>
