--- a/app/src/main/res/layout/activity_discovery.xml
+++ b/app/src/main/res/layout/activity_discovery.xml
@@ -33,26 +33,33 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="30dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|end"
-                    android:layout_marginStart="0dp"
+                    android:layout_gravity="center_vertical|center"
                     android:layout_weight="3"
                     android:gravity="center_vertical|center"
                     android:text="@string/recent"
                     android:textAlignment="center"/>
 
-                <Button
+                <com.karlgao.materialroundbutton.MaterialButton
                     android:id="@+id/see_more_recent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="0dp"
-                    android:layout_weight="1"
-                    android:text="@string/see_more"/>
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:layout_height="36dp"
+                    android:layout_gravity="top"
+                    app:mb_buttonColor="#339CFF"
+                    app:mb_buttonType="raised"
+                    app:mb_cornerRadius="28dp"
+                    app:mb_rippleColor="#40ffffff"
+                    app:mb_text="See More"
+                    app:mb_textColor="#ffffff"
+                    app:mb_textSize="16sp" />
 
             </LinearLayout>
 
@@ -101,25 +108,34 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="4">
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="30dp"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|center"
+                    android:layout_marginStart="0dp"
                     android:layout_weight="3"
+                    android:gravity="center_vertical|center"
                     android:text="@string/popular"
                     android:textAlignment="center"/>
 
-                <Button
+                <com.karlgao.materialroundbutton.MaterialButton
                     android:id="@+id/see_more_popular"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="0dp"
-                    android:layout_marginEnd="0dp"
-                    android:layout_weight="1"
-                    android:text="@string/see_more"/>
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:layout_height="36dp"
+                    android:layout_gravity="top"
+                    app:mb_buttonColor="#339CFF"
+                    app:mb_buttonType="raised"
+                    app:mb_cornerRadius="28dp"
+                    app:mb_rippleColor="#40ffffff"
+                    app:mb_text="See More"
+                    app:mb_textColor="#ffffff"
+                    app:mb_textSize="16sp" />
 
             </LinearLayout>
 
