--- a/app/src/main/res/layout/activity_tattoo_edit.xml
+++ b/app/src/main/res/layout/activity_tattoo_edit.xml
@@ -16,10 +16,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:layout_marginBottom="35dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="35dp"
-        android:layout_marginBottom="35dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp">
 
@@ -108,16 +108,18 @@
                             app:textPaddingBottom="5dp"
                             app:textPaddingLeft="8dp"
                             app:textPaddingRight="8dp"
-                            app:textPaddingTop="5dp"/>
+                            app:textPaddingTop="5dp">
 
-                        <ImageView
+                        </com.cunoraz.tagview.TagView>
+
+                        <Button
                             android:id="@+id/edit_finish"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
-                            android:gravity="end"
-                            app:srcCompat="@drawable/ic_file_upload_black_24dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_alignBottom="@+id/tag_list_edit"
-                            android:layout_alignEnd="@+id/tag_list_edit"/>
+                            android:layout_alignEnd="@+id/tag_list_edit"
+                            android:text="Save"/>
+
                     </RelativeLayout>
 
                 </LinearLayout>
