--- a/app/src/main/res/layout/activity_see_more.xml
+++ b/app/src/main/res/layout/activity_see_more.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/pattern7"
     tools:context="com.tattood.tattood.SeeMore">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="395dp"
-        android:layout_height="576dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/list_view"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp"/>
+        android:layout_marginRight="20dp" />
 </LinearLayout>
