--- a/app/src/main/res/layout/tattoo_item.xml
+++ b/app/src/main/res/layout/tattoo_item.xml
@@ -1,17 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:fresco="http://schemas.android.com/apk/res-auto"
-              android:padding="20dp"
-              android:layout_width="150dp"
-              android:layout_height="150dp">
 
-    <com.facebook.drawee.view.SimpleDraweeView
-        android:id="@+id/item_image"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:padding="20dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginLeft="20dp"
+    card_view:cardCornerRadius="6dp">
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:gravity="center"
-        fresco:actualImageScaleType="fitXY"
-        android:contentDescription="@string/tattoo_description"/>
-        <!--fresco:placeholderImage="@drawable/ic_person_black_24dp"-->
-</LinearLayout>
+        android:background="@color/colorTransPurple">
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/item_image"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:padding="2dp"
+            android:contentDescription="@string/tattoo_description"
+            android:gravity="center"
+            android:scaleType="fitXY"
+            fresco:actualImageScaleType="fitXY" />
+
+    </FrameLayout>
+
+
+
+</android.support.v7.widget.CardView>
+
