--- a/app/src/main/res/layout/activity_tattoo.xml
+++ b/app/src/main/res/layout/activity_tattoo.xml
@@ -44,14 +44,13 @@
                     tools:cardCornerRadius="40dp"
                     tools:elevation="12dp">
 
-                    <ImageView
+                    <com.facebook.drawee.view.SimpleDraweeView
                         android:id="@+id/user_image"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
-                        tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_focused">
-                    </ImageView>
+                        tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_focused"/>
                 </android.support.v7.widget.CardView>
 
                 <TextView
