--- a/app/src/main/res/layout/tattoo_item.xml
+++ b/app/src/main/res/layout/tattoo_item.xml
@@ -16,17 +16,29 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorTransPurple">
+        android:background="@color/colorTransPurple"
+>
 
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/item_image"
-            android:layout_width="fill_parent"
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="2dp"
-            android:contentDescription="@string/tattoo_description"
-            android:gravity="center"
-            android:scaleType="fitXY"
-            fresco:actualImageScaleType="fitXY" />
+            android:background="@color/colorPureWhite"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginLeft="4dp">
+
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/item_image"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:padding="0dp"
+                android:contentDescription="@string/tattoo_description"
+                android:gravity="center"
+                android:scaleType="fitXY"
+                fresco:actualImageScaleType="fitXY" />
+
+        </FrameLayout>
 
     </FrameLayout>
 
