--- a/app/src/main/res/layout/activity_see_more.xml
+++ b/app/src/main/res/layout/activity_see_more.xml
@@ -7,10 +7,8 @@
     android:orientation="vertical"
     android:background="@drawable/pattern7"
     tools:context="com.tattood.tattood.SeeMore">
-
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/list_view"
-        android:layout_marginRight="20dp" />
+        android:id="@+id/list_view"/>
 </LinearLayout>
