--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -44,7 +44,9 @@
                 android:paddingRight="0dp"
                 android:text="Upload"
                 android:textStyle="bold"
-                android:textAllCaps="true" />
+                android:textSize="18sp"
+                android:textColor="@color/colorPureWhite"
+                android:textAllCaps="false" />
 
             <TextView
                 android:id="@+id/toolbar_save"
@@ -195,18 +197,7 @@
                     android:layout_weight="7.32">
 
 
-                    <android.support.design.widget.FloatingActionButton
-                        android:id="@+id/edit_finish"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:gravity="end"
-                        app:layout_anchor="@+id/viewpager"
-                        app:layout_anchorGravity="bottom|right|end"
-                        app:srcCompat="@drawable/ic_file_upload_black_24dp"
-                        android:layout_margin="@dimen/fab_margin"
-                        android:clickable="true"
-                        app:backgroundTint="@color/colorSunriseGrey"
-                        />
+
                 </RelativeLayout>
 
             </LinearLayout>
